install/mini-loop/util/debug-utils/helloworld/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
#  type: NodePort
  selector:
    app: hello-app1
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
#      nodePort: 30036
