install/mini-loop/util/debug-utils/helloworld/hello-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fred
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port: 
              number: 8889
      - path: "/hellov2"
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 8888
